Fix icon spacing

--- a/main.css
+++ b/main.css
@@ -1050,8 +1050,6 @@ nav a#logo:hover, nav a#logo:active, nav a#pull:hover, nav a#pull:active {
   display: inline-block;
   text-decoration: inherit;
   width: 1em;
-  margin-right: .2em;
-  text-align: center;
   /* opacity: .8; */
  
   /* For safety - reset parent styles, that can break glyph codes*/
